fixed spacing ussue

--- a/src/components/background/todos_background.module.scss
+++ b/src/components/background/todos_background.module.scss
@@ -20,7 +20,7 @@
 .todo_bg_ul {
   display: flex;
   position: relative;
-  top: -5px;
+  top: 5px;
   padding: 0;
   margin: 0;
   list-style: none;
@@ -29,7 +29,7 @@
     font-size: 16px;
     font-family: monospace;
     margin: 0;
-    padding: 10px;
+    padding: 0;
     line-height: 30px;
     word-break: break-all;
   }
